correct spacing and relation of items

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -71,3 +71,15 @@
 .details {
   width: 50%;
 }
+
+.list-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 4rem;
+}
+
+.sort {
+  display: flex;
+  align-items: center;
+}
